update import statement

--- a/SWIFTRef API 1.0 - For Developers.html
+++ b/SWIFTRef API 1.0 - For Developers.html
@@ -3073,7 +3073,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Bics-getLeiFromBic-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
