--- a/gpi-api_2.0.2_HTML2.html
+++ b/gpi-api_2.0.2_HTML2.html
@@ -3984,7 +3984,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-CancellationStatusConfirmations-cancellationStatusConfirmationsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
