updated all api

--- a/SWIFTRef API 1.0 - For Developers.html
+++ b/SWIFTRef API 1.0 - For Developers.html
@@ -1618,7 +1618,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Bbans-getIbanFromBban-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -2113,7 +2113,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Bics-getBicDetails-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -2584,7 +2584,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Bics-getBicValidity-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -3534,7 +3534,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Bics-getNationalIdsFromBic-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -4004,7 +4004,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Bics-getSepaReachabilityFromBic-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -4515,7 +4515,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Bics-getSsisFromBic-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -5031,7 +5031,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Ibans-getBicFromIban-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -5492,7 +5492,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Ibans-getIbanDetails-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -5944,7 +5944,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Ibans-getIbanValidity-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -6377,7 +6377,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-Leis-getBicFromLei-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -6859,7 +6859,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-NationalIds-getBicsFromNationalId-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -7387,7 +7387,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-NationalIds-getNationalIdDetails-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -7915,7 +7915,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-NationalIds-getNationalIdValidity-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
