--- a/gpi-api_2.0.2_HTML2.html
+++ b/gpi-api_2.0.2_HTML2.html
@@ -2948,7 +2948,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-CancelTransactions-cancelTransactionsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -5011,7 +5011,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-GetChangedPaymentTransactions-getChangedPaymentTransactionsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -6014,7 +6014,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-GetInvalidEvents-getInvalidEventsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -7017,7 +7017,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-GetPaymentTransactionDetails-getPaymentTransactionDetailsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -8063,7 +8063,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-GetPaymentTransactions-getPaymentTransactionsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -9118,7 +9118,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-StatusConfirmations-statusConfirmationsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
