--- a/gpi-api_1.2.36_HTML2.html
+++ b/gpi-api_1.2.36_HTML2.html
@@ -3612,7 +3612,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-GetInvalidEvents-getInvalidEventsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -4648,7 +4648,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-GetPaymentTransactionDetails-getPaymentTransactionDetailsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -5727,7 +5727,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-GetPaymentTransactions-getPaymentTransactionsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
@@ -6806,7 +6806,7 @@ if ($@) {
                             </div>
 
                             <div class="tab-pane" id="examples-StatusConfirmations-statusConfirmationsPost-0-python">
-                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_function
 import time
 import swagger_client
 from swagger_client.rest import ApiException
