--- a/SWIFTRef_API_1.0-For_Developers.html
+++ b/SWIFTRef_API_1.0-For_Developers.html
@@ -8272,8 +8272,8 @@ except ApiException as e:
           <div id="footer">
             <div id="api-_footer">
               <p>Suggestions, contact, support and error reporting;
-                  <div class="app-desc">Information URL: <a href="https://helloreverb.com">https://helloreverb.com</a></div>
-                  <div class="app-desc">Contact Info: <a href="hello@helloreverb.com">hello@helloreverb.com</a></div>
+                  <div class="app-desc">Information URL: <a href="https://developer.swift.com">https://developer.swift.com</a></div>
+                  <div class="app-desc">Contact Info: <a href="developer-support@swift.com">developer-support@swift.com</a></div>
               </p>
                 <div class="license-info">All rights reserved</div>
                 <div class="license-url">http://apache.org/licenses/LICENSE-2.0.html</div>
