--- a/gpi-api_1.2.36_HTML2.html
+++ b/gpi-api_1.2.36_HTML2.html
@@ -2338,7 +2338,7 @@ margin-bottom: 20px;
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetChangedPaymentTransactions-getChangedPaymentTransactionsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xRecord_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_changed_payment_transactions"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_changed_payment_transactions"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetChangedPaymentTransactions-getChangedPaymentTransactionsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -3339,7 +3339,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetInvalidEvents-getInvalidEventsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xRecord_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_invalid_events"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_invalid_events"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetInvalidEvents-getInvalidEventsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -4340,7 +4340,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetPaymentTransactionDetails-getPaymentTransactionDetailsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xRecord_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_payment_transaction_details"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_payment_transaction_details"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetPaymentTransactionDetails-getPaymentTransactionDetailsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -5384,7 +5384,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetPaymentTransactions-getPaymentTransactionsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xRecord_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_payment_transactions"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/get_payment_transactions"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetPaymentTransactions-getPaymentTransactionsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -6428,7 +6428,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-StatusConfirmations-statusConfirmationsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xRecord_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/status_confirmations"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v1/status_confirmations"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-StatusConfirmations-statusConfirmationsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
