--- a/gpi-api_2.0.2_HTML2.html
+++ b/gpi-api_2.0.2_HTML2.html
@@ -4716,7 +4716,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetChangedPaymentTransactions-getChangedPaymentTransactionsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xrecord-example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_changed_payment_transactions"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_changed_payment_transactions"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetChangedPaymentTransactions-getChangedPaymentTransactionsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -5686,7 +5686,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetInvalidEvents-getInvalidEventsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xrecord-example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_invalid_events"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_invalid_events"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetInvalidEvents-getInvalidEventsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -6656,7 +6656,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetPaymentTransactionDetails-getPaymentTransactionDetailsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xrecord-example" --data "{}"  -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_payment_transaction_details"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}"  -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_payment_transaction_details"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetPaymentTransactionDetails-getPaymentTransactionDetailsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -7669,7 +7669,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-GetPaymentTransactions-getPaymentTransactionsPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" -H "x-record:xrecord-example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_payment_transactions"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -H "LAUApplicationID:lAUApplicationID_example" -H "LAUVersion:lAUVersion_example" -H "LAUCallTime:lAUCallTime_example" -H "LAURequestNonce:lAURequestNonce_example" -H "LAUSigned:lAUSigned_example" -H "LAUSignature:lAUSignature_example" -H "x-api-key:xApiKey_example" --data "{}" -X POST "https://sandbox.swift.com/swift-apitracker-pilot/v2/get_payment_transactions"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-GetPaymentTransactions-getPaymentTransactionsPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
