--- a/gpi-api_1.2.36_HTML2.html
+++ b/gpi-api_1.2.36_HTML2.html
@@ -547,18 +547,15 @@ pre code.sample-request-response-json {
 
 .sidenav > li.nav-header > a {
   padding: 5px 15px;
-  border: 1px solid #e5e5e5;
   width: 190px;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 700;
   font-size: 16px;
-  background-color: #4c8eca;
-  color: #fff;
+  color: #4c8eca;
 }
 
 .sidenav > li.nav-header.active > a {
-  background-color: #4c8eca;
-  color: #fff;
+  color: #4c8eca;
 }
 
 
@@ -580,9 +577,6 @@ pre code.sample-request-response-json {
 .sidenav > li.is-new a {
   border-left: #e5e5e5 4px solid;
 }
-
-
-
 /* ------------------------------------------------------------------------------------------
  * Tabs
  * ------------------------------------------------------------------------------------------ */
