--- a/SWIFTRef_API_1.0-For_Developers.html
+++ b/SWIFTRef_API_1.0-For_Developers.html
@@ -518,68 +518,65 @@ pre code.sample-request-response-json {
 /* ------------------------------------------------------------------------------------------
  * Sidenav
  * ------------------------------------------------------------------------------------------ */
-.sidenav {
-  width: 228px;
-  margin: 0;
-  padding: 20px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-color: #f5f5f5;
-  z-index: 10;
-}
+ .sidenav {
+   width: 228px;
+   margin: 0;
+   padding: 20px;
+   position: fixed;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   overflow-x: hidden;
+   overflow-y: auto;
+   background-color: #f5f5f5;
+   z-index: 10;
+ }
 
-.sidenav > li > a {
-  display: block;
-  width: 192px;
-  margin: 0;
-  padding: 2px 11px;
-  border: 0;
-  border-left: transparent 4px solid;
-  border-right: transparent 4px solid;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-}
+ .sidenav > li > a {
+   display: block;
+   width: 192px;
+   margin: 0;
+   padding: 2px 11px;
+   border: 0;
+   border-left: transparent 4px solid;
+   border-right: transparent 4px solid;
+   font-family: "Source Sans Pro", sans-serif;
+   font-weight: 400;
+   font-size: 14px;
+ }
 
-.sidenav > li.nav-header > a {
-  padding: 5px 15px;
-  border: 1px solid #e5e5e5;
-  width: 190px;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
-  font-size: 16px;
-  background-color: #4c8eca;
-  color: #fff;
-}
+ .sidenav > li.nav-header > a {
+   padding: 5px 15px;
+   width: 190px;
+   font-family: "Source Sans Pro", sans-serif;
+   font-weight: 700;
+   font-size: 16px;
+   color: #4c8eca;
+ }
 
-.sidenav > li.nav-header.active > a {
-  background-color: #4c8eca;
-  color: #fff;
-}
+ .sidenav > li.nav-header.active > a {
+   color: #4c8eca;
+ }
 
 
-00427D
+ 00427D
 
-.sidenav > .active > a {
-  position: relative;
-  z-index: 2;
-}
+ .sidenav > .active > a {
+   position: relative;
+   z-index: 2;
+ }
 
-.sidenav > li > a:hover {
-  background-color: #ffffff;
-}
+ .sidenav > li > a:hover {
+   background-color: #ffffff;
+ }
 
-.sidenav > li.has-modifications a {
-  border-right: #60d060 4px solid;
-}
+ .sidenav > li.has-modifications a {
+   border-right: #60d060 4px solid;
+ }
 
-.sidenav > li.is-new a {
-  border-left: #e5e5e5 4px solid;
-}
+ .sidenav > li.is-new a {
+   border-left: #e5e5e5 4px solid;
+ }
 
 
 
