update tracker v2 sidenav style

--- a/gpi-api_2.0.2_HTML2.html
+++ b/gpi-api_2.0.2_HTML2.html
@@ -298,7 +298,7 @@ td.code {
 #content {
   padding-top: 16px;
   z-Index: -1;
-  margin-left: 270px;
+  margin-left: 350px;
 }
 
 p {
@@ -519,7 +519,7 @@ pre code.sample-request-response-json {
  * Sidenav
  * ------------------------------------------------------------------------------------------ */
  .sidenav {
-   width: 228px;
+   width: 300px;
    margin: 0;
    padding: 20px;
    position: fixed;
@@ -534,7 +534,7 @@ pre code.sample-request-response-json {
 
  .sidenav > li > a {
    display: block;
-   width: 192px;
+   width: 280px;
    margin: 0;
    padding: 2px 11px;
    border: 0;
@@ -547,10 +547,10 @@ pre code.sample-request-response-json {
 
  .sidenav > li.nav-header > a {
    padding: 5px 15px;
-   width: 190px;
+   width: 280px;
    font-family: "Source Sans Pro", sans-serif;
    font-weight: 700;
-   font-size: 16px;
+   font-size: 14px;
    color: #4c8eca;
  }
 
@@ -2660,7 +2660,7 @@ margin-bottom: 20px;
       <div id="content">
         <div id="project">
           <div class="pull-left">
-            <h1>gpi API</h1>
+            <h1>Tracker V2 API</h1>
           </div>
           <div class="clearfix"></div>
         </div>
